*2.2.1 [RC2 or 2.2 final]*

* Simplified the logging format for parameters (don't include controller, action, and format as duplicates) [DHH]

* Remove the logging of the Session ID when the session store is CookieStore [DHH]

* Fixed regex in redirect_to to fully support URI schemes #1247 [Seth Fitzsimmons]

* Fixed bug with asset timestamping when using relative_url_root #1265 [Joe Goldwasser]


*2.2.0 [RC1] (October 24th, 2008)*

* Fix incorrect closing CDATA delimiter and that HTML::Node.parse would blow up on unclosed CDATA sections [packagethief]

* Added stale? and fresh_when methods to provide a layer of abstraction above request.fresh? and friends [DHH]. Example:

    class ArticlesController < ApplicationController
      def show_with_respond_to_block
        @article = Article.find(params[:id])


        # If the request sends headers that differs from the options provided to stale?, then
        # the request is indeed stale and the respond_to block is triggered (and the options
        # to the stale? call is set on the response).
        #
        # If the request headers match, then the request is fresh and the respond_to block is
        # not triggered. Instead the default render will occur, which will check the last-modified
        # and etag headers and conclude that it only needs to send a "304 Not Modified" instead
        # of rendering the template.
        if stale?(:last_modified => @article.published_at.utc, :etag => @article)
          respond_to do |wants|
            # normal response processing
          end
        end
      end

      def show_with_implied_render
        @article = Article.find(params[:id])

        # Sets the response headers and checks them against the request, if the request is stale
        # (i.e. no match of either etag or last-modified), then the default render of the template happens.
        # If the request is fresh, then the default render will return a "304 Not Modified"