@@ -539,7 +539,7 @@ module ActionView
 
           # If the day is hidden and the month is visible, the day should be set to the 1st so all month choices are
           # valid (otherwise it could be 31 and february wouldn't be a valid date)
-          if @options[:discard_day] && !@options[:discard_month]
+          if @datetime && @options[:discard_day] && !@options[:discard_month]
             @datetime = @datetime.change(:day => 1)
           end
 
@@ -567,7 +567,7 @@ module ActionView
 
           # If the day is hidden and the month is visible, the day should be set to the 1st so all month choices are
           # valid (otherwise it could be 31 and february wouldn't be a valid date)
-          if @options[:discard_day] && !@options[:discard_month]
+          if @datetime && @options[:discard_day] && !@options[:discard_month]
             @datetime = @datetime.change(:day => 1)
           end
         end
