@@ -324,7 +324,7 @@ module ActiveRecord
       # Returns true if a connection that's accessible to this class has
       # already been opened.
       def connected?(klass)
-        retrieve_connection_pool(klass).connected?
+        conn = retrieve_connection_pool(klass) ? conn.connected? : false
       end
 
       # Remove the connection for this class. This will close the active
