@@ -73,6 +73,14 @@ class PooledConnectionsTest < ActiveRecord::TestCase
     assert ActiveRecord::ConnectionAdapters::AbstractAdapter === conn
     conn_pool.checkin(conn)
   end
+
+  def test_undefined_connection_returns_false
+    old_handler = ActiveRecord::Base.connection_handler
+    ActiveRecord::Base.connection_handler = ActiveRecord::ConnectionAdapters::ConnectionHandler.new
+    assert_equal false, ActiveRecord::Base.connected?
+  ensure
+    ActiveRecord::Base.connection_handler = old_handler
+  end
 end unless %w(FrontBase).include? ActiveRecord::Base.connection.adapter_name
 
 class AllowConcurrencyDeprecatedTest < ActiveRecord::TestCase
